--- a/styles/sass/_index.scss
+++ b/styles/sass/_index.scss
@@ -32,7 +32,6 @@
 @media #{$max-tablet} {
     .masthead {
         height: 70vh;
-        padding: 5px;
         &-title {
             font-size: 3.5rem;
         }
